MDL-7861 xhtml strict fixes - the invisible fieldset was borking layout because it behaved like a block, added display:inline directive

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -276,7 +276,7 @@ img.emoticon {
 }
 
 form.popupform {
-  display: inline;
+    display: inline;
 }
 
 .arrow_button {
@@ -303,8 +303,10 @@ form.popupform {
 }
 
 .invisiblefieldset {
-  border: 0;  
-  padding: 0;
+  display:inline;
+  border:0px;
+  padding:0px;
+  margin:0px;
 }
 
 span.hide,
